--- a/prepDataForCollegeMap.ipynb
+++ b/prepDataForCollegeMap.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2456,7 +2456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 73,
    "metadata": {
     "scrolled": true
    },
@@ -2470,7 +2470,7 @@
        "Name: year, dtype: int64"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2481,7 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2492,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2501,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2514,7 +2514,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2525,7 +2525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2534,7 +2534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2545,7 +2545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2559,7 +2559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2582,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2591,7 +2591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2607,7 +2607,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2618,20 +2618,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "geometry = [Point(xy) for xy in zip(nyColleges.geo_latitude, nyColleges.geo_longitude)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nyColleges.drop(columns=['geo_latitude', 'geo_longitude'], inplace=True)"
+    "#geometry = [Point(xy) for xy in zip(nyColleges.geo_latitude, nyColleges.geo_longitude)]"
    ]
   },
   {
@@ -2640,7 +2631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "crs={'init':'epsg:4326'}"
+    "#crs={'init':'epsg:4326'}"
    ]
   },
   {
@@ -2649,12 +2640,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nyColleges = gpd.GeoDataFrame(nyColleges, crs=crs, geometry=geometry)"
+    "#nyColleges = gpd.GeoDataFrame(nyColleges, crs=crs, geometry=geometry)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nyColleges = gpd.GeoDataFrame(nyColleges, geometry=gpd.points_from_xy(nyColleges.geo_longitude,\n",
+    "                                                               nyColleges.geo_latitude))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nyColleges.drop(columns=['geo_latitude', 'geo_longitude'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2663,7 +2673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
