add additional data points

--- a/prepDataForCollegeMap.ipynb
+++ b/prepDataForCollegeMap.ipynb
@@ -17,7 +17,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import geopandas as gpd\n",
-    "from shapely.geometry import Point"
+    "from shapely.geometry import Point\n"
    ]
   },
   {
@@ -2559,7 +2559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2582,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2591,7 +2591,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nyColleges['pct_admitted_total'] = round(nyColleges['pct_admitted_total'],3)\n",
+    "nyColleges['pct_matriculated_total'] = round(nyColleges['pct_matriculated_total'], 3)\n",
+    "nyColleges['pct_admitted_female'] = round(nyColleges['pct_admitted_female'],3)\n",
+    "nyColleges['pct_matriculated_female'] =round(nyColleges['pct_matriculated_female'],3)\n",
+    "nyColleges['pct_admitted_male'] = round(nyColleges['pct_admitted_male'],3)\n",
+    "nyColleges['pct_matriculated_male'] =round(nyColleges['pct_matriculated_male'],3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nyColleges = nyColleges.merge(req[req.year==2017], on='unitid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2603,11 +2626,20 @@
        "       'number_enrolled_total', 'pct_admitted_total', 'pct_matriculated_total',\n",
        "       'female_applied', 'female_admitted', 'pct_admitted_female',\n",
        "       'pct_matriculated_female', 'male_applied', 'male_admitted',\n",
-       "       'pct_admitted_male', 'pct_matriculated_male'],\n",
+       "       'pct_admitted_male', 'pct_matriculated_male', 'year',\n",
+       "       'reqt_test_scores', 'open_admissions_policy', 'reqt_hs_gpa',\n",
+       "       'reqt_recommendations', 'sat_number_submitting',\n",
+       "       'sat_percent_submitting', 'act_number_submitting',\n",
+       "       'act_percent_submitting', 'sat_crit_read_25_pctl',\n",
+       "       'sat_crit_read_75_pctl', 'sat_math_25_pctl', 'sat_math_75_pctl',\n",
+       "       'act_composite_25_pctl', 'act_composite_75_pctl', 'act_english_25_pctl',\n",
+       "       'act_english_75_pctl', 'act_math_25_pctl', 'act_math_75_pctl',\n",
+       "       'sat_writing_25_pctl', 'sat_writing_75_pctl', 'act_writing_25_pctl',\n",
+       "       'act_writing_75_pctl'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2618,66 +2650,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#geometry = [Point(xy) for xy in zip(nyColleges.geo_latitude, nyColleges.geo_longitude)]"
+    "totComp = comp[(comp.subcohort=='Total') \n",
+    "               & (comp.institution_level=='Four or more years')].groupby(['unitid', 'gender','race']).mean().reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#crs={'init':'epsg:4326'}"
+    "totComp.drop(columns=['fips', 'cohort_year', 'sex', 'cohort_rev', 'exclusions', 'cohort_adj_150pct', \n",
+    "             'transfers_out', 'still_enrolled_long_program', 'completers_100pct','completers_150pct',\n",
+    "              'still_enrolled', 'no_longer_enrolled', 'year'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#nyColleges = gpd.GeoDataFrame(nyColleges, crs=crs, geometry=geometry)"
+    "tot = totComp[(totComp.gender=='Total') & (totComp.race=='Total')][['unitid', 'completion_rate_150pct']].copy()\n",
+    "totFemale = totComp[(totComp.gender=='Female') & (totComp.race=='Total')][['unitid', 'completion_rate_150pct']].copy()\n",
+    "totMale = totComp[(totComp.gender=='Male') & (totComp.race=='Total')][['unitid', 'completion_rate_150pct']].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "totFemale.rename(columns={'completion_rate_150pct':'female_completion_rate_150pct'}, inplace=True)\n",
+    "totMale.rename(columns={'completion_rate_150pct':'male_completion_rate_150pct'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nyColleges = nyColleges.merge(tot, on='unitid').merge(totFemale, on='unitid').merge(totMale, on='unitid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
     "nyColleges = gpd.GeoDataFrame(nyColleges, geometry=gpd.points_from_xy(nyColleges.geo_longitude,\n",
-    "                                                               nyColleges.geo_latitude))"
+    "                                                               nyColleges.geo_latitude))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nyColleges.drop(columns=['geo_latitude', 'geo_longitude'], inplace=True)"
+    "nyColleges.drop(columns=['geo_latitude', 'geo_longitude'], inplace=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nyColleges.drop(columns=['index'], inplace=True)"
+    "nyColleges.drop(columns=['index'], inplace=True)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nyColleges.to_file(\"data/nyColleges.geojson\", driver=\"GeoJSON\")"
+    "nyColleges.to_file(\"data/nyColleges.geojson\", driver=\"GeoJSON\")\n",
+    "\n"
    ]
   }
  ],
