--- a/prepDataForCollegeMap.ipynb
+++ b/prepDataForCollegeMap.ipynb
@@ -2769,19 +2769,28 @@
    "outputs": [],
    "source": [
     "# round all values\n",
-    "nyColleges['pct_admitted_total'] = round(nyColleges['pct_admitted_total'],3)*100\n",
-    "nyColleges['pct_matriculated_total'] = round(nyColleges['pct_matriculated_total'], 3)*100\n",
-    "nyColleges['pct_admitted_female'] = round(nyColleges['pct_admitted_female'],3)*100\n",
-    "nyColleges['pct_matriculated_female'] =round(nyColleges['pct_matriculated_female'],3)*100\n",
-    "nyColleges['pct_admitted_male'] = round(nyColleges['pct_admitted_male'],3)*100\n",
-    "nyColleges['pct_matriculated_male'] =round(nyColleges['pct_matriculated_male'],3)*100\n",
+    "nyColleges['pct_admitted_total'] = round(nyColleges['pct_admitted_total']*100,2)\n",
+    "nyColleges['pct_matriculated_total'] = round(nyColleges['pct_matriculated_total']*100,2)\n",
+    "nyColleges['pct_admitted_female'] = round(nyColleges['pct_admitted_female']*100,2)\n",
+    "nyColleges['pct_matriculated_female'] =round(nyColleges['pct_matriculated_female']*100,2)\n",
+    "nyColleges['pct_admitted_male'] = round(nyColleges['pct_admitted_male']*100,2)\n",
+    "nyColleges['pct_matriculated_male'] =round(nyColleges['pct_matriculated_male']*100,2)\n",
     "\n",
-    "nyColleges['completion_rate_150pct'] = round(nyColleges['completion_rate_150pct'],3)*100\n",
-    "nyColleges['female_completion_rate_150pct'] = round(nyColleges['female_completion_rate_150pct'], 3)*100\n",
-    "nyColleges['male_completion_rate_150pct'] = round(nyColleges['male_completion_rate_150pct'],3)*100\n",
+    "nyColleges['completion_rate_150pct'] = round(nyColleges['completion_rate_150pct']*100,2)\n",
+    "nyColleges['female_completion_rate_150pct'] = round(nyColleges['female_completion_rate_150pct']*100,2)\n",
+    "nyColleges['male_completion_rate_150pct'] = round(nyColleges['male_completion_rate_150pct']*100,2)\n",
     "\n",
-    "nyColleges['first_gen_student_pct'] = round(nyColleges['first_gen_student_pct'], 3)*100\n",
+    "nyColleges['first_gen_student_pct'] = round(nyColleges['first_gen_student_pct']*100,2)\n",
     "nyColleges['faminc_med'] = round(nyColleges['faminc_med'],0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nyColleges.fi"
    ]
   },
   {
